# cookiecutter-cpp-app

./: .gitignore  .travis.yml  LICENSE  Makefile  README.rst  cookiecutter.json  requirements.txt  test.bash
.github/workflows/: test.yml
hooks/: post_gen_project.py
tests/: test_template.py
{{cookiecutter.project_name}}/: CMakeLists.txt  README.rst
{{cookiecutter.project_name}}/doc/: conf.py
{{cookiecutter.project_name}}/doc/doxygen/: .gitignore  Doxyfile
{{cookiecutter.project_name}}/doc/sphinx/: conf.py  index.rst
{{cookiecutter.project_name}}/src/: cli.cpp  main.cpp  version.h
{{cookiecutter.project_name}}/src/api/: api.hpp  cmd1.cpp  cmd2.cpp
{{cookiecutter.project_name}}/src/core/: CommandLine.cpp  CommandLine.hpp  configure.hpp  logging.cpp  logging.hpp
{{cookiecutter.project_name}}/test/: CMakeLists.txt  CommandLineTest.cpp  test_cli.cpp  test_greeting.cpp  test_logging.cpp
{{cookiecutter.project_slug}}/: .gitignore  CMakeLists.txt  Makefile  README.rst
{{cookiecutter.project_slug}}/doc/doxygen/: Doxyfile
{{cookiecutter.project_slug}}/doc/sphinx/: Makefile  index.rst  make.bat
{{cookiecutter.project_slug}}/docs/: CMakeLists.txt
{{cookiecutter.project_slug}}/docs/doxygen/: .gitignore  Doxyfile.in
{{cookiecutter.project_slug}}/etc/: config.ini  config.toml
{{cookiecutter.project_slug}}/src/: CMakeLists.txt  cli.cpp  main.cpp  version.hpp.in
{{cookiecutter.project_slug}}/src/api/: api.hpp  cmd1.cpp  cmd2.cpp
{{cookiecutter.project_slug}}/src/core/: CommandLine.cpp  CommandLine.hpp  configure.cpp  configure.hpp  logging.cpp  logging.hpp
{{cookiecutter.project_slug}}/test/: CMakeLists.txt  test_configure.cpp
{{cookiecutter.project_slug}}/tests/unit/: CMakeLists.txt  CommandLineTest.cpp  test_cli.cpp  test_configure.cpp  test_logging.cpp
{{cookiecutter.project_slug}}/tests/unit/assets/: config.ini  config.toml
{{cookiecutter.repo_name}}/: CMakeLists.txt  requirements-doc.txt
{{cookiecutter.repo_name}}/doc/: conf.py  make.bat
{{cookiecutter.repo_name}}/src/: greeting.cpp  main.cpp
{{cookiecutter.repo_name}}/test/: CMakeLists.txt  test_greeting.cpp
